--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/twitter4j-async-4.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-core-4.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-examples-4.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-media-support-4.0.4.jar"/>
+	<classpathentry kind="lib" path="lib/twitter4j-stream-4.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
